fixed spacing issue with main header question counter

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6264,6 +6264,8 @@ footer {
   background-image: url("../img/game1Background.jpg"); }
 
 .game1Header .headerText {
+  display: flex;
+  justify-content: center;
   color: white; }
 
 .nextChallangeContainer {
