--- a/stylesheets/modules/_game1.scss
+++ b/stylesheets/modules/_game1.scss
@@ -45,6 +45,8 @@
 .game1Header {
     background-image: url('../img/game1Background.jpg');
     .headerText {
+        display: flex;
+        justify-content: center;
         color: white;
     }
 }
